--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Device-FTDI
 
+0.03 Wed Feb 29 2012 Pavel Shaydo <zwon@cpan.org>
+    * Fix configure dependencies
+
 0.02 Mon Feb 27 2012 Pavel Shaydo <zwon@cpan.org>
     * Add script to generate XS constants
     * Check if libftdi is present when writing Makefile
