--- a/Changes
+++ b/Changes
@@ -1,5 +1,15 @@
 Revision history for Device-FTDI
 
+0.07    2015/11/03 23:11:48
+        [CHANGES]
+         * Provide USB vendor/product ID constants
+         * Provide an export tag for each constant group
+         * Various documentation updates
+            + a complete SYNOPSIS example program
+            + barename =head2 function style
+
+-----
+
 0.06 Sun Nov  1 2015 Pavel Shaydo <zwon@cpan.org>
     - export BITMODE_* constants (Paul "LeoNerd" Evans, see #3, #4)
 
